--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
+<!DOCTYPE html>
 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ANSE (Anonymous Project Page)</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 40px 20px;
+      line-height: 1.6;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    .video-container {
+      margin: 20px 0;
+    }
+    video {
+      width: 100%;
+      border: 1px solid #ccc;
+    }
+    .figure {
+      text-align: center;
+      margin: 20px 0;
+    }
+    .figure img {
+      width: 100%;
+      max-width: 700px;
+    }
+    code {
+      background-color: #f4f4f4;
+      padding: 2px 4px;
+      border-radius: 4px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>ANSE: Active Noise Selection for Video Diffusion Models</h1>
+
+  <p><strong>This project page is provided for anonymous review.</strong></p>
+
+  <h2>Teaser Video</h2>
+  <div class="video-container">
+    <video controls>
+      <source src="teaser.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <h2>Figure 1: Seed Selection Impact</h2>
+  <div class="figure">
+    <img src="fig1.png" alt="Figure 1">
+    <p><em>Qualitative comparison between random and ANSE-selected seeds.</em></p>
+  </div>
+
+  <h2>Paper</h2>
+  <p><a href="anse.pdf" target="_blank">anse.pdf</a></p>
+
+  <h2>BibTeX</h2>
+  <pre>
+@article{anse2025anonymous,
+  title={Model-Aware Noise Selection via Attention for Video Diffusion},
+  author={Anonymous},
+  journal={Under Review},
+  year={2025}
+}
+  </pre>
+
+</body>
+</html>
