--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-  <h1>ANSE: Active Noise Selection for Video Diffusion Models</h1>
+  <h1>Version 2 ANSE: Active Noise Selection for Video Diffusion Models</h1>
 
   <p><strong>This project page is provided for anonymous review.</strong></p>
 
